--- a/mtk-sdk36/Bulgarian/main/SecurityCenter.apk/res/values-bg/strings.xml
+++ b/mtk-sdk36/Bulgarian/main/SecurityCenter.apk/res/values-bg/strings.xml
@@ -1193,7 +1193,7 @@
     <string name="confirm_package_type">Потвърдете плана си за данни</string>
     <string name="confirm_prompt_all_permission">Да питам ли за разрешения за всички приложения?</string>
     <string name="confirm_reject_all_permission">Ограничаване на всички приложения при използването на тази функция?</string>
-    <string name="confirm_reject_all_permission_only_opening_screen">Restrict this permission during app launch for all apps?</string>
+    <string name="confirm_reject_all_permission_only_opening_screen">Ограничаване на това разрешение при стартиране на приложението за всички приложения?</string>
     <string name="confirm_take">Изтегляне</string>
     <string name="confirm_upgrade">Опции</string>
     <string name="connect_internet_by_mobiledata">Връзка чрез мобилни данни</string>
@@ -2684,7 +2684,7 @@ Xiaomi Gaming Cooler"</string>
     <string name="hint_antispam_mode_edit">Потребителски режим</string>
     <string name="hints_handle_item_text_virus">Опасно</string>
     <string name="hints_input_roaming_daily_limit">Въведете лимит за данни</string>
-    <string name="hints_loading_text">Зареждане...</string>
+    <string name="hints_loading_text">Зареждане…</string>
     <string name="hints_risk_descx_title">Описание:</string>
     <string name="hints_risk_name_title">Риск:</string>
     <string name="hints_scan_danger_result">Открит е риск, поправете сега</string>
@@ -2808,7 +2808,10 @@ Xiaomi Gaming Cooler"</string>
     <string name="lock_all_title">Заключи всички приложения</string>
     <string name="lock_app_input_invalid_car">Някои символи не се поддържат</string>
     <string name="lock_mode_title">Настройки за заключване</string>
+    <string name="lock_screen_face_password_type_tips">Можеш да промениш паролата си в „Лицеви данни &amp; Заключване на екрана“</string>
+    <string name="lock_screen_finger_password_type_tips">Можеш да промениш паролата си в „Пръстови отпечатъци &amp; Заключване на екрана“</string>
     <string name="lock_screen_hongbao_message">От %1$s</string>
+    <string name="lock_screen_password_only_type_tips">Можеш да промениш паролата си в „Заключване на екрана“</string>
     <string name="lock_screen_password_type">Заключване на екрана</string>
     <string name="lock_screen_password_type_tips">Можете да промените заключването на екрана в Пръстов отпечатък, Лицеви данни и Заключване на екрана.</string>
     <string name="lock_screen_traffic_guide_notification_summary">%s използвани при заключен екран.</string>
@@ -3179,7 +3182,7 @@ Xiaomi Gaming Cooler"</string>
     <string name="more_setting_summary">Персонализирайте напомнянията и задайте „Не безпокойте“ за тази функция</string>
     <string name="more_settings">Още</string>
     <string name="morning">Сутрин</string>
-    <string name="msg_only_opening_screen">Access will be restricted for the first %d seconds after the app starts</string>
+    <string name="msg_only_opening_screen">Достъпът ще бъде ограничен за първите %d секунди след стартиране на приложението</string>
     <string name="mtp_ptp_mode_summary">MTP или PTP е активен.</string>
     <string name="mtrl_badge_numberless_content_description">Ново известие</string>
     <string name="mtrl_chip_close_icon_content_description">Премахване на %1$s</string>
@@ -3992,7 +3995,7 @@ Xiaomi Gaming Cooler"</string>
     <string name="permission_instruction_send_mms">Това разрешение позволява на приложения да изпращат мултимедийни съобщения, което може да доведе до начисляване на допълнителни такси. Зловредни приложения може да използват това разрешение, за да изпращат платени съобщения без ваше съгласие.</string>
     <string name="permission_instruction_send_payment_sms">Това разрешение позволява на приложенията да изпращат платени текстови съобщения.</string>
     <string name="permission_instruction_send_sms">Това разрешение позволява на приложения да изпращат текстови съобщения, което може да доведе до начисляване на допълнителни такси. Зловредни приложения може да използват това разрешение, за да изпращат платени съобщения без ваше съгласие.</string>
-    <string name="permission_instruction_shake">"This permission allows apps to detect the device's position in space, recognize shaking, determine screen orientation, as well as use game controls and map navigation."</string>
+    <string name="permission_instruction_shake">Това разрешение позволява на приложенията да засичат позицията на устройството в пространството, да разпознават разклащане, да определят ориентацията на екрана, както и да използват игрови контроли и навигация по карти.</string>
     <string name="permission_instruction_show_locked">Това разрешение разрешава на приложенията да показват елементи на Заключен екран. Зловредни приложения може да използват това разрешение, за да показват реклами.</string>
     <string name="permission_instruction_sociality">Ако разрешите достъп на приложенията до файлове в собствените им папки, системата Ви позволява да решите дали тези приложения да получават достъп и до файлове генерирани в приложения за социална мрежа, с цел защита на Вашата поверителност. Тъй като приложения с Android API ниво 29 и по-високо вече поддържат разделяне на хранилището, тази функция няма да е налична за тях.</string>
     <string name="permission_instruction_storage">Ако разрешите достъп на приложенията до файлове в собствените им папки, системата Ви позволява да решите дали тези приложения да получават достъп и до елементите в Галерия и файлове генерирани в приложения за социална мрежа, с цел защита на Вашата поверителност. Тъй като приложения с Android API ниво 29 и по-високо вече поддържат разделяне на хранилището, тази функция няма да е налична за тях.</string>
@@ -4007,7 +4010,7 @@ Xiaomi Gaming Cooler"</string>
     <string name="permission_instruction_write_settings">Това разрешение позволява на приложения да променят системни настройки. Зловредни приложения може да използват този режим на разрешение със системните Ви настройки и да повлияят на нормалното използване на Вашето устройство.</string>
     <string name="permission_legacy_storage">Достъп до снимки, видеоклипове, аудио и файлове</string>
     <string name="permission_oaid_desc">Желаете ли да разрешите на %1$s да проследява дейностите Ви в други приложения и уебсайтове?</string>
-    <string name="permission_only_opening_screen">Restrict access during app launch</string>
+    <string name="permission_only_opening_screen">Ограничаване на достъпа при стартиране на приложението</string>
     <string name="permission_permission_control_closed_desc_dialog_msg">Приложенията няма да искат вашето разрешение преди да четат контактите ви, преглеждат списъка ви с обаждания, променят настройките на системата, използват камерата и другите ресурси в устройството. Може да включите функцията от Настойки на разрешенията.</string>
     <string name="permission_permission_control_closed_desc_dialog_title">Мениджърът на разрешения е изкл.</string>
     <string name="permission_precise_location">Точно местоположение</string>
@@ -4772,8 +4775,11 @@ Xiaomi Gaming Cooler"</string>
     <string name="privacy_using_record">Запис на аудио</string>
     <string name="privacyapp_number_masked_text">Съдържанието на известията е скрито</string>
     <string name="privacyapp_number_unmasked_text">Съдържанието на известията може да се скрие</string>
+    <string name="private_face_password_type_tips">Можеш да промениш паролата си в „Лицеви данни &amp; Заключване на екрана > Парола за защита на лични данни“</string>
     <string name="private_file">Лични файлове</string>
+    <string name="private_finger_password_type_tips">Можеш да промениш паролата си в „Пръстови отпечатъци &amp; Заключване на екрана > Парола за защита на лични данни“</string>
     <string name="private_note">Скрити бележки</string>
+    <string name="private_password_only_type_tips">Можеш да промениш паролата си в „Заключване на екрана > Парола за защита на лични данни“</string>
     <string name="private_password_type">Парола за защита на лични данни</string>
     <string name="private_password_type_tips">Можете да промените паролата си в Пръстов отпечатък, Лицеви данни и Заключване на екрана > Парола за защита на лични данни.</string>
     <string name="private_photo">Личен албум</string>
@@ -4830,7 +4836,7 @@ Xiaomi Gaming Cooler"</string>
     <string name="recommended">Най-добри</string>
     <string name="reject_all">Ограничи всички</string>
     <string name="reject_countdown">Откажи (%d)</string>
-    <string name="reject_only_opening_screen">Restrict access during app launch for all apps</string>
+    <string name="reject_only_opening_screen">Ограничаване на достъпа при стартиране на приложението за всички приложения</string>
     <string name="reject_usb_install">Отказано инсталиране на следните приложения през USB</string>
     <string name="release_meminfo">Освободете %dMB</string>
     <string name="release_memory">Изчистване на кеша</string>
@@ -4842,7 +4848,7 @@ Xiaomi Gaming Cooler"</string>
     <string name="renew_ip">Нов опит</string>
     <string name="renew_now">Поднови</string>
     <string name="repair">Поправи</string>
-    <string name="repair_loading_text">Един момент…</string>
+    <string name="repair_loading_text">Момент…</string>
     <string name="repeat_prompts">Забави! Не изпращай няколко заявки подред.</string>
     <string name="repeat_type">Повторение</string>
     <string name="repeated_marked_number_summary">Не блокирай второ повикване от същия докладван номер в рамките на %d минути</string>
@@ -5989,7 +5995,7 @@ Xiaomi Gaming Cooler"</string>
     <string name="usage_access_title">Достъп до статистика за използването</string>
     <string name="usage_sorted_activity_lable">Използване на данни</string>
     <string name="usage_sorted_empty_text">Празно</string>
-    <string name="usage_sorted_loading_text">Зарежда се…</string>
+    <string name="usage_sorted_loading_text">Момент…</string>
     <string name="usage_type_audio">Аудио</string>
     <string name="usage_type_background_desk_power_consumption_time">Използване на заден план</string>
     <string name="usage_type_cpu">Процесор, общо</string>
