--- a/mtk-sdk36/Czech/main/SecurityCenter.apk/res/values-cs/strings.xml
+++ b/mtk-sdk36/Czech/main/SecurityCenter.apk/res/values-cs/strings.xml
@@ -1193,7 +1193,7 @@ Některé z platebních transakcí však nebyly dokončeny. Pro odebrání souhl
     <string name="confirm_package_type">Potvrďte svůj datový plán</string>
     <string name="confirm_prompt_all_permission">Ptát se na oprávnění pro všechny aplikace?</string>
     <string name="confirm_reject_all_permission">Zakázat všem aplikacím používat tuto funkci?</string>
-    <string name="confirm_reject_all_permission_only_opening_screen">Restrict this permission during app launch for all apps?</string>
+    <string name="confirm_reject_all_permission_only_opening_screen">Omezit toto povolení během spouštění aplikace pro všechny aplikace?</string>
     <string name="confirm_take">Získat</string>
     <string name="confirm_upgrade">Možnosti</string>
     <string name="connect_internet_by_mobiledata">Mobilní datové připojení</string>
@@ -2808,7 +2808,10 @@ Při dalším využití mobilního připojení vám mohou být operátorem účt
     <string name="lock_all_title">Uzamknout všechny aplikace</string>
     <string name="lock_app_input_invalid_car">Některé symboly nejsou podporovány</string>
     <string name="lock_mode_title">Nastavení zámku</string>
+    <string name="lock_screen_face_password_type_tips">Heslo můžete změnit v části Obličej a zámek obrazovky</string>
+    <string name="lock_screen_finger_password_type_tips">Heslo můžete změnit v části Otisky prstů a zámek obrazovky</string>
     <string name="lock_screen_hongbao_message">Od uživatele %1$s</string>
+    <string name="lock_screen_password_only_type_tips">Heslo můžete změnit v části Zámek obrazovky</string>
     <string name="lock_screen_password_type">Zámek obrazovky</string>
     <string name="lock_screen_password_type_tips">Zámek obrazovky si můžete změnit v sekci Otisky prstů, tvář a zámek obrazovky.</string>
     <string name="lock_screen_traffic_guide_notification_summary">Spotřeba Zamykací obrazovky: %s</string>
@@ -3179,7 +3182,7 @@ Vaše zařízení je nyní o %s rychlejší."</string>
     <string name="more_setting_summary">Přizpůsobte připomenutí a nastavte režim Nerušit pro tuto funkci</string>
     <string name="more_settings">Více</string>
     <string name="morning">Dopoledne</string>
-    <string name="msg_only_opening_screen">Access will be restricted for the first %d seconds after the app starts</string>
+    <string name="msg_only_opening_screen">Přístup bude omezen během prvních %d sekund po spuštění aplikace</string>
     <string name="mtp_ptp_mode_summary">MTP nebo PTP je aktivní</string>
     <string name="mtrl_badge_numberless_content_description">Nové oznámení</string>
     <string name="mtrl_chip_close_icon_content_description">Odstranit položku %1$s</string>
@@ -3992,7 +3995,7 @@ Ultra spořiče baterie"</string>
     <string name="permission_instruction_send_mms">Toto povolení umožňuje aplikacím odesílat multimediální zprávy, což může znamenat další poplatky. Škodlivé aplikace mohou toto povolení zneužít k odesílání placených zpráv bez vašeho souhlasu.</string>
     <string name="permission_instruction_send_payment_sms">Toto povolení umožňuje aplikacím odesílat placené textové zprávy.</string>
     <string name="permission_instruction_send_sms">Toto povolení umožňuje aplikacím odesílat textové zprávy, což může znamenat další poplatky. Škodlivé aplikace mohou toto povolení zneužít k odesílání placených zpráv bez vašeho souhlasu.</string>
-    <string name="permission_instruction_shake">"This permission allows apps to detect the device's position in space, recognize shaking, determine screen orientation, as well as use game controls and map navigation."</string>
+    <string name="permission_instruction_shake">Toto povolení umožňuje aplikacím detekovat polohu zařízení v prostoru, rozpoznat zatřesení, určit orientaci obrazovky, jakož i používat herní ovladače a mapovou navigaci.</string>
     <string name="permission_instruction_show_locked">Toto oprávnění umožňuje aplikacím zobrazovat položky na vaší Zamykací obrazovce. Škodlivé aplikace mohou toto oprávnění využít pro zobrazování reklam.</string>
     <string name="permission_instruction_sociality">Pokud aplikacím udělíte oprávnění k přístupu k souborům v jejich vlastních složkách, z důvodu ochrany vašeho soukromí vám systém umožní rozhodnout se, zda mohou tyto aplikace zároveň získat přístup k položkám vygenerovaným aplikacemi sociálních médií. Protože aplikace s Android API úrovně 29 nebo vyšší již podporují oddělená úložiště, tento přepínač nebude pro tyto aplikace dostupný.</string>
     <string name="permission_instruction_storage">Pokud aplikacím udělíte oprávnění k přístupu k souborům v jejich vlastních složkách, z důvodu ochrany vašeho soukromí vám systém umožní rozhodnout se, zda mohou tyto aplikace zároveň získat přístup k položkám ve vaší Galerii a souborům vygenerovaným aplikacemi sociálních médií. Protože aplikace s Android API úrovně 29 nebo vyšší již podporují oddělená úložiště, tento přepínač nebude pro tyto aplikace dostupný.</string>
@@ -4007,7 +4010,7 @@ Ultra spořiče baterie"</string>
     <string name="permission_instruction_write_settings">Toto povolení umožňuje aplikacím měnit nastavení systému. Škodlivé aplikace ho mohou zneužít k úpravám systémových nastavení a ovlivnit tak běžné používání zařízení.</string>
     <string name="permission_legacy_storage">Přístup k fotografiím, videím, zvukům a souborům</string>
     <string name="permission_oaid_desc">Povolit %1$s sledovat vaše aktivity v jiných aplikacích a stránkách?</string>
-    <string name="permission_only_opening_screen">Restrict access during app launch</string>
+    <string name="permission_only_opening_screen">Omezit přístup během spouštění aplikace</string>
     <string name="permission_permission_control_closed_desc_dialog_msg">Aplikace se nebudou ptát na povolení pro přístup ke kontaktům, historii hovorů, změnu nastavení systému nebo přístup k fotoaparátu a jiným zdrojům zařízení. Tuto funkci můžete kdykoli znovu aktivovat v nastavení Povolení.</string>
     <string name="permission_permission_control_closed_desc_dialog_title">Správce povolení</string>
     <string name="permission_precise_location">Přesná poloha</string>
@@ -4772,8 +4775,11 @@ Odebrat souhlas nyní?"</string>
     <string name="privacy_using_record">Nahrávání zvuku</string>
     <string name="privacyapp_number_masked_text">Obsah oznámení je skrytý</string>
     <string name="privacyapp_number_unmasked_text">Obsah oznámení může být skryt</string>
+    <string name="private_face_password_type_tips">Heslo můžete změnit v části Obličej a zámek obrazovky > Heslo pro ochranu osobních údajů</string>
     <string name="private_file">Soukromé soubory</string>
+    <string name="private_finger_password_type_tips">Heslo můžete změnit v části Otisky prstů a zámek obrazovky > Heslo pro ochranu osobních údajů</string>
     <string name="private_note">Skryté poznámky</string>
+    <string name="private_password_only_type_tips">Heslo můžete změnit v části Zámek obrazovky > Heslo pro ochranu osobních údajů</string>
     <string name="private_password_type">Heslo pro ochranu osobních údajů</string>
     <string name="private_password_type_tips">Heslo si můžete změnit přechodem na Otisky prstů, tvář a zámek obrazovky > Heslo pro ochranu osobních údajů.</string>
     <string name="private_photo">Soukromé album</string>
@@ -4830,7 +4836,7 @@ Odebrat souhlas nyní?"</string>
     <string name="recommended">Doporučené</string>
     <string name="reject_all">Zakázat vše</string>
     <string name="reject_countdown">Zakázat (%d)</string>
-    <string name="reject_only_opening_screen">Restrict access during app launch for all apps</string>
+    <string name="reject_only_opening_screen">Omezit přístup během spouštění pro všechny aplikace</string>
     <string name="reject_usb_install">Zakázána instalace přes USB těchto aplikací</string>
     <string name="release_meminfo">Uvolněte %d MB</string>
     <string name="release_memory">Vymazat mezipaměť</string>
