--- a/mtk-sdk36/English/main/SecurityCenter.apk/res/values-en-rAU/strings.xml
+++ b/mtk-sdk36/English/main/SecurityCenter.apk/res/values-en-rAU/strings.xml
@@ -2766,7 +2766,10 @@ Carrier may charge you additional fees if you use mobile data connection again."
     <string name="lock_all_title">Lock all apps</string>
     <string name="lock_app_input_invalid_car">"Some symbols aren't supported"</string>
     <string name="lock_mode_title">Lock settings</string>
+    <string name="lock_screen_face_password_type_tips">You can change your password in Face data &amp; screen lock</string>
+    <string name="lock_screen_finger_password_type_tips">You can change your password in Fingerprints &amp; screen lock</string>
     <string name="lock_screen_hongbao_message">From %1$s</string>
+    <string name="lock_screen_password_only_type_tips">You can change your password in Screen lock</string>
     <string name="lock_screen_password_type">Screen lock</string>
     <string name="lock_screen_password_type_tips">You can change your screen lock in Fingerprints, face data, and screen lock.</string>
     <string name="lock_screen_traffic_guide_notification_summary">%s used at lock screen</string>
@@ -3841,7 +3844,7 @@ Ultra battery saver"</string>
     <string name="permission_instruction_send_mms">This permission allows apps to send multimedia messages, which may generate additional fees. Malicious apps might use this permission to send paid messages without your consent.</string>
     <string name="permission_instruction_send_payment_sms">This permission allows apps to send paid text messages.</string>
     <string name="permission_instruction_send_sms">This permission allows apps to send text messages, which may generate additional fees. Malicious apps might use this permission to send paid messages without your consent.</string>
-    <string name="permission_instruction_shake">"This permission allows apps to detect the device's position in space, recognise shaking, and determine screen orientation."</string>
+    <string name="permission_instruction_shake">"This permission allows apps to detect the device's position in space, recognise shaking, determine screen orientation, as well as use game controls and map navigation."</string>
     <string name="permission_instruction_show_locked">This permission allows apps to show items on your Lock screen. Malicious apps might use this permission to show ads.</string>
     <string name="permission_instruction_sociality">"If you allow apps to access files in their own folders, the system lets you decide whether you also want these apps to access the files generated in social media apps in order to protect your privacy. As the apps with Android API level 29 or higher already support storage partitions, this switch won't be provided for them."</string>
     <string name="permission_instruction_storage">"If you allow apps to access files in their own folders, the system lets you decide whether you also want these apps to access the items in your Gallery and files generated in social media apps in order to protect your privacy. As the apps with Android API level 29 or higher already support storage partitions, this switch won't be provided for them."</string>
@@ -4620,8 +4623,11 @@ Withdraw consent now?"</string>
     <string name="privacy_using_record">Recording audio</string>
     <string name="privacyapp_number_masked_text">Notification content is hidden</string>
     <string name="privacyapp_number_unmasked_text">Notification content can be hidden</string>
+    <string name="private_face_password_type_tips">You can change your password in Face data &amp; screen lock > Privacy protection password</string>
     <string name="private_file">Private files</string>
+    <string name="private_finger_password_type_tips">You can change your password in Fingerprints &amp; screen lock > Privacy protection password</string>
     <string name="private_note">Hidden notes</string>
+    <string name="private_password_only_type_tips">You can change your password in Screen lock > Privacy protection password</string>
     <string name="private_password_type">Privacy protection password</string>
     <string name="private_password_type_tips">You can change your password in Fingerprints, face data, and screen lock > Privacy protection password.</string>
     <string name="private_photo">Private album</string>
