--- a/mtk-sdk36/Finnish/main/SecurityCenter.apk/res/values-fi/strings.xml
+++ b/mtk-sdk36/Finnish/main/SecurityCenter.apk/res/values-fi/strings.xml
@@ -1193,7 +1193,7 @@ Jotkin tapahtumistasi eivät kuitenkaan ole vielä suoritettuja. Jos haluat peru
     <string name="confirm_package_type">Vahvista datapakettisi</string>
     <string name="confirm_prompt_all_permission">Kysy käyttöoikeutta kaikille sovelluksille?</string>
     <string name="confirm_reject_all_permission">Estetäänkö kaikkia sovelluksia käyttämästä tätä toimintoa?</string>
-    <string name="confirm_reject_all_permission_only_opening_screen">Restrict this permission during app launch for all apps?</string>
+    <string name="confirm_reject_all_permission_only_opening_screen">Rajoitetaanko näitä käyttölupia kaikkien sovellusten käynnistämisen aikana?</string>
     <string name="confirm_take">Hanki</string>
     <string name="confirm_upgrade">Vaihtoehdot</string>
     <string name="connect_internet_by_mobiledata">Mobiilidatayhteys</string>
@@ -2808,7 +2808,10 @@ Operaattorisi saattaa veloittaa sinua lisämaksuilla, jos käytät mobiilidatayh
     <string name="lock_all_title">Lukitse kaikki sovellukset</string>
     <string name="lock_app_input_invalid_car">Joitakin symboleja ei tueta</string>
     <string name="lock_mode_title">Lukitusasetukset</string>
+    <string name="lock_screen_face_password_type_tips">Voit vaihtaa salasanan kohdassa Kasvotiedot ja näytön lukitus</string>
+    <string name="lock_screen_finger_password_type_tips">Voit vaihtaa salasanan kohdassa Sormenjäljet ​​ja näytön lukitus</string>
     <string name="lock_screen_hongbao_message">Henkilöltä %1$s</string>
+    <string name="lock_screen_password_only_type_tips">Voit vaihtaa salasanan kohdassa Näytön lukitus</string>
     <string name="lock_screen_password_type">Näytönlukitus</string>
     <string name="lock_screen_password_type_tips">Voit vaihtaa näytön lukituksen kohdassa Sormenjäljet, kasvotiedot ja näytön lukitus.</string>
     <string name="lock_screen_traffic_guide_notification_summary">%s käytetty lukitusnäytössä</string>
@@ -3179,7 +3182,7 @@ Laitteesi on %s nopeampi nyt."</string>
     <string name="more_setting_summary">Mukauta muistutuksia ja aseta Älä häiritse -tila tälle toiminnolle</string>
     <string name="more_settings">Lisää</string>
     <string name="morning">Aamu</string>
-    <string name="msg_only_opening_screen">Access will be restricted for the first %d seconds after the app starts</string>
+    <string name="msg_only_opening_screen">Käyttöoikeuksia rajoitetaan ensimmäisen %d sekunnin ajan sovelluksen käynnistymisen jälkeen</string>
     <string name="mtp_ptp_mode_summary">MTP tai PTP on aktiivinen</string>
     <string name="mtrl_badge_numberless_content_description">Uusi ilmoitus</string>
     <string name="mtrl_chip_close_icon_content_description">Poista %1$s</string>
@@ -3992,7 +3995,7 @@ ultravirransäästö"</string>
     <string name="permission_instruction_send_mms">Tämän luvan avulla sovellukset voivat lähettää multimediaviestejä, mikä saattaa aiheuttaa lisämaksuja. Haitalliset sovellukset voivat käyttää tätä lupaa maksullisten viestien lähettämiseen ilman suostumustasi.</string>
     <string name="permission_instruction_send_payment_sms">Tämä lupa sallii sovellusten lähettää maksullisia tekstiviestejä.</string>
     <string name="permission_instruction_send_sms">Tämän luvan avulla sovellukset voivat lähettää tekstiviestejä, mikä saattaa aiheuttaa lisämaksuja. Haitalliset sovellukset voivat käyttää tätä lupaa maksullisten viestien lähettämiseen ilman suostumustasi.</string>
-    <string name="permission_instruction_shake">"This permission allows apps to detect the device's position in space, recognize shaking, determine screen orientation, as well as use game controls and map navigation."</string>
+    <string name="permission_instruction_shake">Näiden käyttölupien avulla sovellukset voivat havaita laitteen sijainnin tilassa, tunnistaa tärinän, määrittää näytön suunnan sekä käyttää peliohjaimia ja karttanavigointia.</string>
     <string name="permission_instruction_show_locked">Tämän luvan avulla sovellukset voivat näyttää kohteita lukitusnäytölläsi. Haitalliset sovellukset voivat käyttää tätä lupaa mainosten näyttämiseen.</string>
     <string name="permission_instruction_sociality">Jos annat sovellusten käyttää tiedostoja omissa kansioissaan, järjestelmä antaa sinun päättää, haluatko näiden sovellusten myös käyttää sosiaalisen median sovelluksissa luotuja tiedostoja yksityisyytesi suojaamiseksi. Koska sovellukset, joiden Android-sovellusliittymätaso on vähintään 29, tukevat jo tallennusosioita, tätä kytkintä ei tarjota heille.</string>
     <string name="permission_instruction_storage">Jos annat sovellusten käyttää tiedostoja omissa kansioissaan, järjestelmä antaa sinun päättää, haluatko näiden sovellusten myös käyttää Gallerian kohteita ja sosiaalisen median sovelluksissa luotuja tiedostoja yksityisyytesi suojaamiseksi. Koska sovellukset, joiden Android-sovellusliittymätaso on vähintään 29, tukevat jo tallennusosioita, tätä kytkintä ei tarjota heille.</string>
@@ -4007,7 +4010,7 @@ ultravirransäästö"</string>
     <string name="permission_instruction_write_settings">Tämän luvan avulla sovellukset voivat muokata järjestelmäasetuksia. Haitalliset sovellukset voivat käyttää tätä käyttöoikeusasetusta järjestelmäasetuksissasi ja vaikuttaa laitteesi normaaliin käyttöön.</string>
     <string name="permission_legacy_storage">Käytä valokuvia, videoita, ääntä ja tiedostoja</string>
     <string name="permission_oaid_desc">Saako %1$s seurata toimintaasi muissa sovelluksissa ja verkkosivustoilla?</string>
-    <string name="permission_only_opening_screen">Restrict access during app launch</string>
+    <string name="permission_only_opening_screen">Rajoita käyttöä sovelluksen käynnistyksen aikana</string>
     <string name="permission_permission_control_closed_desc_dialog_msg">Sovellukset eivät kysy lupaasi ennen yhteystietojen lukemista, puheluhistorian katsomista, järjestelmän asetuksien muuttamista tai pääsyä kameraan ja muihin laitteen resursseihin. Voit ottaa tämän toiminnon käyttöön Käyttöoikeudet-asetuksista.</string>
     <string name="permission_permission_control_closed_desc_dialog_title">Käyttöoikeuksien hallinta</string>
     <string name="permission_precise_location">Tarkka sijainti</string>
@@ -4772,8 +4775,11 @@ Peruutetaanko suostumus nyt?"</string>
     <string name="privacy_using_record">Äänen tallentaminen</string>
     <string name="privacyapp_number_masked_text">Ilmoituksen sisältö on piilotettu</string>
     <string name="privacyapp_number_unmasked_text">Ilmoituksen sisällön voi piilottaa</string>
+    <string name="private_face_password_type_tips">Voit vaihtaa salasanan kohdassa Kasvotiedot ja näytön lukitus > Yksityisyyden suojaussalasana</string>
     <string name="private_file">Yksityiset tiedostot</string>
+    <string name="private_finger_password_type_tips">Voit vaihtaa salasanan kohdassa Sormenjäljet ​​ja näytön lukitus > Yksityisyyden suojaussalasana</string>
     <string name="private_note">Piilotetut muistiinpanot</string>
+    <string name="private_password_only_type_tips">Voit vaihtaa salasanan kohdassa Näytön lukitus > Yksityisyyden suojaussalasana</string>
     <string name="private_password_type">Yksityisyyssuojan salasana</string>
     <string name="private_password_type_tips">Voit vaihtaa salasanasi kohdassa Sormenjäljet, kasvotiedot ja näytön lukitus > Yksityisyyden suojaussalasana.</string>
     <string name="private_photo">Yksityinen albumi</string>
@@ -4830,7 +4836,7 @@ Peruutetaanko suostumus nyt?"</string>
     <string name="recommended">Kiinnostavat</string>
     <string name="reject_all">Estä kaikki</string>
     <string name="reject_countdown">Kiellä (%d)</string>
-    <string name="reject_only_opening_screen">Restrict access during app launch for all apps</string>
+    <string name="reject_only_opening_screen">Rajoita kaikkien sovellusten käyttöä sovelluksen käynnistyksen aikana</string>
     <string name="reject_usb_install">Kiellettiin seuraavien sovelluksien asennus USB:n kautta</string>
     <string name="release_meminfo">Vapauta %d Mt</string>
     <string name="release_memory">Tyhjennä välimuisti</string>
