--- a/mtk-sdk36/French/main/SecurityCenter.apk/res/values-fr/strings.xml
+++ b/mtk-sdk36/French/main/SecurityCenter.apk/res/values-fr/strings.xml
@@ -1193,7 +1193,7 @@ Cependant, certaines de vos transactions ne sont pas encore terminées. Pour pou
     <string name="confirm_package_type">Confirmez votre plan de données</string>
     <string name="confirm_prompt_all_permission">"Demander l'autorisation pour toutes les applications ?"</string>
     <string name="confirm_reject_all_permission">Restreindre toutes les applications utilisant cette fonctionnalité ?</string>
-    <string name="confirm_reject_all_permission_only_opening_screen">Restrict this permission during app launch for all apps?</string>
+    <string name="confirm_reject_all_permission_only_opening_screen">Restreindre cette autorisation lors du lancement de toutes les applications ?</string>
     <string name="confirm_take">Obtenir</string>
     <string name="confirm_upgrade">Options</string>
     <string name="connect_internet_by_mobiledata">Connexion aux données mobile</string>
@@ -2810,7 +2810,10 @@ Votre opérateur peut vous facturer des frais supplémentaires si vous utilisez 
     <string name="lock_all_title">Bloquer toutes les applications</string>
     <string name="lock_app_input_invalid_car">Certains symboles ne sont pas pris en charge</string>
     <string name="lock_mode_title">Paramètres de verrouillage</string>
+    <string name="lock_screen_face_password_type_tips">"Vous pouvez modifier votre mot de passe dans Données faciales et verrouillage d'écran"</string>
+    <string name="lock_screen_finger_password_type_tips">"Vous pouvez modifier votre mot de passe dans Empreintes digitales et verrouillage d'écran"</string>
     <string name="lock_screen_hongbao_message">De %1$s</string>
+    <string name="lock_screen_password_only_type_tips">"Vous pouvez modifier votre mot de passe dans Verrouillage d'écran"</string>
     <string name="lock_screen_password_type">"Verrouillage d'écran"</string>
     <string name="lock_screen_password_type_tips">"Vous pouvez modifier le verrouillage de votre écran dans Empreintes digitales, données faciales et verrouillage d'écran."</string>
     <string name="lock_screen_traffic_guide_notification_summary">"%s utilisé à l'écran de verrouillage"</string>
@@ -3181,7 +3184,7 @@ Votre appareil est désormais %s plus rapide."</string>
     <string name="more_setting_summary">Personnalisez les rappels et définissez le mode NPD pour cette fonctionnalité</string>
     <string name="more_settings">Plus</string>
     <string name="morning">Matin</string>
-    <string name="msg_only_opening_screen">Access will be restricted for the first %d seconds after the app starts</string>
+    <string name="msg_only_opening_screen">"L'accès sera restreint pendant les %d premières secondes après le démarrage de l'application"</string>
     <string name="mtp_ptp_mode_summary">MTP ou PTP est actif</string>
     <string name="mtrl_badge_numberless_content_description">Nouvelle notification</string>
     <string name="mtrl_chip_close_icon_content_description">Supprimer %1$s</string>
@@ -3994,7 +3997,7 @@ de l'économiseur de batterie Ultra"</string>
     <string name="permission_instruction_send_mms">"Cette autorisation permet aux applications d'envoyer des messages multimédias, ce qui peut générer des frais supplémentaires. Des applications malveillantes peuvent utiliser cette autorisation pour envoyer des messages payants sans votre consentement."</string>
     <string name="permission_instruction_send_payment_sms">"Cette autorisation permet aux applications d'envoyer des SMS payants."</string>
     <string name="permission_instruction_send_sms">"Cette autorisation permet aux applications d'envoyer des messages texte, ce qui peut générer des frais supplémentaires. Des applications malveillantes peuvent utiliser cette autorisation pour envoyer des messages payants sans votre consentement."</string>
-    <string name="permission_instruction_shake">"This permission allows apps to detect the device's position in space, recognize shaking, determine screen orientation, as well as use game controls and map navigation."</string>
+    <string name="permission_instruction_shake">"Cette autorisation permet aux applications de détecter la position de l'appareil dans l'espace, de reconnaître les secousses, de déterminer l'orientation de l'écran, ainsi que d'utiliser les commandes de jeu et la navigation cartographique."</string>
     <string name="permission_instruction_show_locked">"Cette autorisation permet aux applications d'afficher des éléments sur votre écran de verrouillage. Des applications malveillantes peuvent utiliser cette autorisation pour afficher les publicités."</string>
     <string name="permission_instruction_sociality">"Si vous autorisez les applications à accéder aux fichiers dans leurs propres dossiers, le système vous permet de décider si vous souhaitez également que ces applications accèdent aux fichiers générés dans les applications de médias sociaux afin de protéger votre vie privée. Comme les applications avec le niveau d'API Android 29 ou supérieur prennent déjà en charge les partitions de stockage, ce commutateur ne leur sera pas fourni."</string>
     <string name="permission_instruction_storage">"Si vous autorisez les applications à accéder aux fichiers dans leurs propres dossiers, le système vous permet de décider si vous souhaitez également que ces applications accèdent aux éléments de votre galerie et aux fichiers générés dans les applications de médias sociaux afin de protéger votre vie privée. Comme les applications avec le niveau d'API Android 29 ou supérieur prennent déjà en charge les partitions de stockage, ce commutateur ne leur sera pas fourni."</string>
@@ -4009,7 +4012,7 @@ de l'économiseur de batterie Ultra"</string>
     <string name="permission_instruction_write_settings">"Cette autorisation permet aux applications de modifier les paramètres du système. Des applications malveillantes peuvent utiliser cette autorisation avec les paramètres de votre système et affecter l'utilisation normale de votre appareil."</string>
     <string name="permission_legacy_storage">Accès aux photos, vidéos, audio et fichiers</string>
     <string name="permission_oaid_desc">"Autoriser %1$s à suivre vos activités sur d'autres applications et sites Web ?"</string>
-    <string name="permission_only_opening_screen">Restrict access during app launch</string>
+    <string name="permission_only_opening_screen">"Restreindre l'accès lors du lancement de l'application"</string>
     <string name="permission_permission_control_closed_desc_dialog_msg">"Les applications ne vous demanderont plus votre autorisation pour lire vos contacts, voir votre journal d'appels, accéder à l'appareil photo et aux autres services de l'appareil. Vous pouvez changer ce réglage dans le Gestionnaire d'Autorisations."</string>
     <string name="permission_permission_control_closed_desc_dialog_title">"Gestionnaire d'autorisations"</string>
     <string name="permission_precise_location">Localisation précise</string>
@@ -4774,8 +4777,11 @@ Retirer le consentement maintenant ?"</string>
     <string name="privacy_using_record">Enregistrement audio</string>
     <string name="privacyapp_number_masked_text">Le contenu de la notification est masqué</string>
     <string name="privacyapp_number_unmasked_text">Le contenu de la notification peut être masqué</string>
+    <string name="private_face_password_type_tips">"Vous pouvez modifier votre mot de passe dans Données faciales et verrouillage d'écran > Mot de passe de protection de la confidentialité"</string>
     <string name="private_file">Fichiers privés</string>
+    <string name="private_finger_password_type_tips">"Vous pouvez modifier votre mot de passe dans Empreintes digitales et verrouillage d'écran > Mot de passe de protection de la confidentialité"</string>
     <string name="private_note">Notes masquées</string>
+    <string name="private_password_only_type_tips">"Vous pouvez modifier votre mot de passe dans Verrouillage d'écran > Mot de passe de protection de la confidentialité"</string>
     <string name="private_password_type">Mot de passe de protection de confidentialité</string>
     <string name="private_password_type_tips">"Vous pouvez modifier votre mot de passe dans Empreintes digitales, données faciales et verrouillage d'écran > Mot de passe de protection de la confidentialité."</string>
     <string name="private_photo">Album privé</string>
@@ -4832,7 +4838,7 @@ Retirer le consentement maintenant ?"</string>
     <string name="recommended">Sélection</string>
     <string name="reject_all">Tout restreindre</string>
     <string name="reject_countdown">Refuser (%d)</string>
-    <string name="reject_only_opening_screen">Restrict access during app launch for all apps</string>
+    <string name="reject_only_opening_screen">"Restreindre l'accès lors du lancement de toutes les applications"</string>
     <string name="reject_usb_install">"Refus de l'installation des applications suivantes via USB"</string>
     <string name="release_meminfo">"Libérer jusqu'à %d Mo"</string>
     <string name="release_memory">Vider le cache</string>
