--- a/mtk-sdk36/German/main/SecurityCenter.apk/res/values-de/strings.xml
+++ b/mtk-sdk36/German/main/SecurityCenter.apk/res/values-de/strings.xml
@@ -1193,7 +1193,7 @@ Jedoch sind einige deiner Transaktionen noch nicht abgeschlossen. Um deine Zusti
     <string name="confirm_package_type">Bestätige deinen Datentarif</string>
     <string name="confirm_prompt_all_permission">Berechtigungen für alle Apps anfordern?</string>
     <string name="confirm_reject_all_permission">Alle Apps von der Nutzung dieser Funktion ausschließen?</string>
-    <string name="confirm_reject_all_permission_only_opening_screen">Restrict this permission during app launch for all apps?</string>
+    <string name="confirm_reject_all_permission_only_opening_screen">Soll diese Berechtigung beim App-Start für alle Apps eingeschränkt werden?</string>
     <string name="confirm_take">Erhalten</string>
     <string name="confirm_upgrade">Optionen</string>
     <string name="connect_internet_by_mobiledata">Mobile Datenverbindung</string>
@@ -2693,7 +2693,7 @@ Drücke und halte den Indikator, um das Fenster zu verschieben."</string>
     <string name="hints_scan_result_no_finish">Scan nicht abgeschlossen. Tippen Sie, um neu zu beginnen.</string>
     <string name="hints_scan_result_phone_safe">Alles sieht gut aus</string>
     <string name="hints_scan_result_safe">Sicher</string>
-    <string name="hints_scanning">"Gescannt wird » "</string>
+    <string name="hints_scanning">Gescannt wird…</string>
     <string name="hints_scanning_text">Scannen…</string>
     <string name="hints_virus_apk_list_item_summary">APK</string>
     <string name="hints_virus_apk_summary">%s (APK)</string>
@@ -2810,7 +2810,10 @@ Anbieter kann dir weitere Gebühren berechnen, wenn du mobile Datenverbindung er
     <string name="lock_all_title">Alle Apps sperren</string>
     <string name="lock_app_input_invalid_car">Einige Symbole werden nicht unterstützt</string>
     <string name="lock_mode_title">Sperreinstellungen</string>
+    <string name="lock_screen_face_password_type_tips">Du kannst dein Passwort unter Gesichtsdaten und Bildschirmsperre ändern</string>
+    <string name="lock_screen_finger_password_type_tips">Du kannst dein Passwort unter Fingerabdrücke und Bildschirmsperre ändern</string>
     <string name="lock_screen_hongbao_message">Von %1$s</string>
+    <string name="lock_screen_password_only_type_tips">Du kannst dein Passwort unter Bildschirmsperre ändern</string>
     <string name="lock_screen_password_type">Bildschirmsperre</string>
     <string name="lock_screen_password_type_tips">Du kannst deine Bildschirmsperre unter Fingerabdrücke, Gesichtsdaten und Bildschirmsperre ändern.</string>
     <string name="lock_screen_traffic_guide_notification_summary">%s im Sperrbildschirm verwendet</string>
@@ -3181,7 +3184,7 @@ Dein Gerät ist jetzt %s schneller."</string>
     <string name="more_setting_summary">Erinnerungen anpassen und BNS für diese Funktion festlegen</string>
     <string name="more_settings">Mehr</string>
     <string name="morning">Morgen</string>
-    <string name="msg_only_opening_screen">Access will be restricted for the first %d seconds after the app starts</string>
+    <string name="msg_only_opening_screen">Der Zugriff wird für die ersten %d Sekunden nach dem Start der App eingeschränkt.</string>
     <string name="mtp_ptp_mode_summary">MTP oder PTP ist aktiv</string>
     <string name="mtrl_badge_numberless_content_description">Neue Benachrichtigung</string>
     <string name="mtrl_chip_close_icon_content_description">%1$s entfernen</string>
@@ -3994,7 +3997,7 @@ wird ausgeschaltet"</string>
     <string name="permission_instruction_send_mms">Diese Berechtigung erlaubt Apps, Multimedia-Nachrichten, zu senden, die zusätzliche Gebühren verursachen können. Bösartige Apps könnten diese Berechtigung nutzen, um ohne deine Zustimmung kostenpflichtige Nachrichten zu senden.</string>
     <string name="permission_instruction_send_payment_sms">Diese Berechtigung erlaubt Apps, kostenpflichtige Textnachrichten zu senden.</string>
     <string name="permission_instruction_send_sms">Diese Berechtigung erlaubt Apps, Textnachrichten zu senden, die zusätzliche Gebühren verursachen können. Bösartige Apps könnten diese Berechtigung nutzen, um ohne deine Zustimmung kostenpflichtige Nachrichten zu senden.</string>
-    <string name="permission_instruction_shake">"This permission allows apps to detect the device's position in space, recognize shaking, determine screen orientation, as well as use game controls and map navigation."</string>
+    <string name="permission_instruction_shake">Diese Berechtigung erlaubt es Apps, die Position des Geräts im Raum zu erkennen, Erschütterungen zu erfassen, die Bildschirmausrichtung zu bestimmen sowie Spielsteuerungen und Kartennavigation zu nutzen.</string>
     <string name="permission_instruction_show_locked">Diese Berechtigung ermöglicht der App, Elemente auf deinem Sperrbildschirm anzuzeigen. Schädliche Anwendungen könnten diese Berechtigung nutzen, um Werbung anzuzeigen.</string>
     <string name="permission_instruction_sociality">Wenn du Apps den Zugriff auf Dateien in deinen eigenen Ordnern erlaubst, lässt dich das System entscheiden, ob diese Apps auch auf Dateien, die in Social-Media-Apps erstellt wurden, zugreifen dürfen, um deine Privatsphäre zu schützen. Da die Apps mit Android-API-Level 29 oder höher bereits Speicherpartitionen unterstützen, wird dieser Schalter für diese nicht angeboten.</string>
     <string name="permission_instruction_storage">Wenn du Apps den Zugriff auf Dateien in deinen eigenen Ordnern erlaubst, lässt dich das System entscheiden, ob diese Apps auch auf die Elemente in deiner Galerie und auf Dateien, die in Social-Media-Apps erstellt wurden, zugreifen dürfen, um deine Privatsphäre zu schützen. Da die Apps mit Android-API-Level 29 oder höher bereits Speicherpartitionen unterstützen, wird dieser Schalter für diese nicht angeboten.</string>
@@ -4009,7 +4012,7 @@ wird ausgeschaltet"</string>
     <string name="permission_instruction_write_settings">Diese Berechtigung erlaubt Apps, Systemeinstellungen zu ändern. Bösartige Apps können diese Berechtigung nutzen, um deine Systemeinstellungen zu verändern und die normale Nutzung deines Geräts zu beeinträchtigen.</string>
     <string name="permission_legacy_storage">Zugriff auf Fotos, Videos, Audio und Dateien</string>
     <string name="permission_oaid_desc">%1$s erlauben, deine Aktivitäten in anderen Apps und auf Websites zu verfolgen?</string>
-    <string name="permission_only_opening_screen">Restrict access during app launch</string>
+    <string name="permission_only_opening_screen">Zugriff beim App-Start einschränken</string>
     <string name="permission_permission_control_closed_desc_dialog_msg">Apps fragen nicht nach deiner Erlaubnis, bevor sie deine Kontakte lesen, deine Anrufliste einsehen, Systemeinstellungen ändern oder auf Kamera- und andere Gerätenressourcen zugreifen. Du kannst diese Funktion in den Berechtigungseinstellungen einschalten.</string>
     <string name="permission_permission_control_closed_desc_dialog_title">Rechtemanager</string>
     <string name="permission_precise_location">Präziser Standort</string>
@@ -4774,8 +4777,11 @@ Zustimmung jetzt widerrufen?"</string>
     <string name="privacy_using_record">Audio wird aufgenommen</string>
     <string name="privacyapp_number_masked_text">Der Inhalt der Benachrichtigung ist ausgeblendet</string>
     <string name="privacyapp_number_unmasked_text">Der Inhalt der Benachrichtigung lässt sich ausblenden</string>
+    <string name="private_face_password_type_tips">Du kannst dein Passwort unter Gesichtsdaten und Bildschirmsperre > Datenschutzpasswort ändern</string>
     <string name="private_file">Private Dateien</string>
+    <string name="private_finger_password_type_tips">Du kannst dein Passwort unter Fingerabdrücke und Bildschirmsperre > Datenschutzpasswort ändern</string>
     <string name="private_note">Verborgene Notizen</string>
+    <string name="private_password_only_type_tips">Du kannst dein Passwort unter Bildschirmsperre > Datenschutzpasswort ändern</string>
     <string name="private_password_type">Datenschutzpasswort</string>
     <string name="private_password_type_tips">Du kannst dein Passwort unter Fingerabdrücke, Gesichtsdaten und Bildschirmsperre > Datenschutzpasswort ändern.</string>
     <string name="private_photo">Privates Album</string>
@@ -4832,7 +4838,7 @@ Zustimmung jetzt widerrufen?"</string>
     <string name="recommended">Empfohlen</string>
     <string name="reject_all">Alle einschränken</string>
     <string name="reject_countdown">Verweigern (%d)</string>
-    <string name="reject_only_opening_screen">Restrict access during app launch for all apps</string>
+    <string name="reject_only_opening_screen">Zugriff beim App-Start für alle Apps einschränken</string>
     <string name="reject_usb_install">Installation folgender Apps über USB wurde verweigert</string>
     <string name="release_meminfo">%d MB bereinigt</string>
     <string name="release_memory">Cache löschen</string>
