--- a/mtk-sdk36/Hebrew/main/SecurityCenter.apk/res/values-iw-rIL/strings.xml
+++ b/mtk-sdk36/Hebrew/main/SecurityCenter.apk/res/values-iw-rIL/strings.xml
@@ -1138,7 +1138,7 @@
     <string name="confirm_package_type">אשר את תוכנית הנתונים שלך</string>
     <string name="confirm_prompt_all_permission">לבקש הרשאות עבור כל היישומים?</string>
     <string name="confirm_reject_all_permission">למנוע מכל היישומים שימוש בתכונה זו?</string>
-    <string name="confirm_reject_all_permission_only_opening_screen">Restrict this permission during app launch for all apps?</string>
+    <string name="confirm_reject_all_permission_only_opening_screen">להגביל את ההרשאה הזו בזמן הפעלת היישום עבור כל היישומים?</string>
     <string name="confirm_take">קבל</string>
     <string name="confirm_upgrade">אפשרויות</string>
     <string name="connect_internet_by_mobiledata">חיבור נתונים סלולרי</string>
@@ -2691,7 +2691,10 @@ Xiaomi Gaming Cooler"</string>
     <string name="lock_all_title">נעילת כל האפליקציות</string>
     <string name="lock_app_input_invalid_car">חלק מהסמלים אינם נתמכים</string>
     <string name="lock_mode_title">הגדרות נעילה</string>
+    <string name="lock_screen_face_password_type_tips">ניתן לשנות את הסיסמה תחת נתוני פנים ונעילת מסך</string>
+    <string name="lock_screen_finger_password_type_tips">ניתן לשנות את הסיסמה תחת טביעות אצבע ונעילת מסך</string>
     <string name="lock_screen_hongbao_message">מ-%1$s</string>
+    <string name="lock_screen_password_only_type_tips">ניתן לשנות את הסיסמה תחת נעילת המסך</string>
     <string name="lock_screen_password_type">מסך נעילה</string>
     <string name="lock_screen_password_type_tips">ניתן לשנות את הסיסמה תחת טביעות אצבע, נתוני פנים, ונעילת מסך.</string>
     <string name="lock_screen_traffic_guide_notification_summary">"%s נוצלו ב'מסך הנעילה'"</string>
@@ -3050,7 +3053,7 @@ Xiaomi Gaming Cooler"</string>
     <string name="more_setting_summary">"התאמה אישית של תזכורות והגדרת 'לא להפריע' עבור מאפיין זה"</string>
     <string name="more_settings">עוד</string>
     <string name="morning">בוקר</string>
-    <string name="msg_only_opening_screen">Access will be restricted for the first %d seconds after the app starts</string>
+    <string name="msg_only_opening_screen">הגישה תוגבל למשך %d השניות הראשונות אחרי פתיחת היישום</string>
     <string name="mtp_ptp_mode_summary">MTP או PTP פעיל</string>
     <string name="na_main_card_ad_subtitle">חבילת גלישה גדולה, שיחות חינם, תעריפים נמוכים</string>
     <string name="na_main_card_ad_text">מצא תוכנית שמתאימה לך</string>
@@ -3829,7 +3832,7 @@ Xiaomi Gaming Cooler"</string>
     <string name="permission_instruction_send_mms">הרשאה זו מאפשרת ליישומים לשלוח הודעות מולטימדיה, מה שעלול לגרור חיובים נוספים. יישומים זדוניים עלולים להשתמש בהרשאה זו כדי לשלוח הודעות בתשלום ללא הסכמתכם.</string>
     <string name="permission_instruction_send_payment_sms">הרשאה זו מאפשרת ליישומים לשלוח הודעות טקסט בתשלום.</string>
     <string name="permission_instruction_send_sms">הרשאה זו מאפשרת ליישומים לשלוח הודעות טקסט, מה שעלול לגרור חיובים נוספים. יישומים זדוניים עלולים להשתמש בהרשאה זו כדי לשלוח הודעות בתשלום ללא הסכמתכם.</string>
-    <string name="permission_instruction_shake">"This permission allows apps to detect the device's position in space, recognize shaking, determine screen orientation, as well as use game controls and map navigation."</string>
+    <string name="permission_instruction_shake">הרשאה זו מאפשרת ליישומים לזהות את מיקום המכשיר בחלל, לזהות רעד, לקבוע את כיוון המסך וגם להשתמש בבקרות משחקים ובניווט במפה.</string>
     <string name="permission_instruction_show_locked">הרשאה זו מאפשרת ליישומים להציג פריטים במסך הנעילה. יישומים זדוניים עשויים להשתמש בהרשאה זו כדי להציג פרסומות.</string>
     <string name="permission_instruction_sociality">אם אישרת ליישומים לקבל גישה לקבצים בתיקיות שלהם, המערכת מאפשרת לך להחליט האם ברצונך לתת ליישומים הללו גישה גם לקבצים שנוצרו ביישומים של רשתות חברתיות. זה נעשה כדי להגן על פרטיותך. יישומים עם אנדרואיד API ברמה 29 ומעלה כבר תומכים במחיצות אחסון, לכן מתג זה לא יופיע בהם.</string>
     <string name="permission_instruction_storage">אם אישרת ליישומים לקבל גישה לקבצים בתיקיות שלהם, המערכת מאפשרת לך להחליט האם ברצונך לתת ליישומים הללו גישה גם לתוכן הגלריה ולקבצים שנוצרו ביישומים של רשתות חברתיות. זה נעשה כדי להגן על פרטיותך. יישומים עם אנדרואיד API ברמה 29 ומעלה כבר תומכים במחיצות אחסון, לכן מתג זה לא יופיע בהם.</string>
@@ -3844,7 +3847,7 @@ Xiaomi Gaming Cooler"</string>
     <string name="permission_instruction_write_settings">הרשאה זו מאפשרת ליישומים לשנות את הגדרות המערכת. יישומים זדוניים עלולים להשתמש בהרשאה זו כדי לשנות את הגדרות המערכת ולהשפיע על השימוש הרגיל במכשירכם.</string>
     <string name="permission_legacy_storage">גישה לתמונות, סרטונים, שמע וקבצים</string>
     <string name="permission_oaid_desc">לאפשר ל-%1$s לעקוב אחר הפעילות שלך ביישומים ובאתרי אינטרנט אחרים?</string>
-    <string name="permission_only_opening_screen">Restrict access during app launch</string>
+    <string name="permission_only_opening_screen">להגביל גישה בזמן הפעלת היישום</string>
     <string name="permission_permission_control_closed_desc_dialog_msg">"יישומים לא יבקשו הרשאות לפני קריאת אנשי הקשר, צפיה ביומן השיחות, שינוי הגדרות המערכת, או גישה למצלמה ומשאבים אחרים של מכשירך. תוכל לכבות תכונה זו בהגדרות 'הרשאות'."</string>
     <string name="permission_permission_control_closed_desc_dialog_title">מנהל ההרשאות</string>
     <string name="permission_precise_location">מיקום מדויק</string>
@@ -4608,8 +4611,11 @@ Xiaomi Gaming Cooler"</string>
     <string name="privacy_using_record">הקלטת שמע</string>
     <string name="privacyapp_number_masked_text">תוכן ההתראות מוסתר</string>
     <string name="privacyapp_number_unmasked_text">ניתן להסתיר את תוכן ההתראות</string>
+    <string name="private_face_password_type_tips">ניתן לשנות את הסיסמה תחת נתוני פנים ונעילת מסך > סיסמה להגנת הפרטיות</string>
     <string name="private_file">קבצים פרטיים</string>
+    <string name="private_finger_password_type_tips">ניתן לשנות את הסיסמה תחת טביעות אצבע ונעילת מסך > סיסמה להגנת הפרטיות</string>
     <string name="private_note">פתקים מוסתרים</string>
+    <string name="private_password_only_type_tips">ניתן לשנות את הסיסמה תחת נעילת מסך > סיסמה להגנת הפרטיות</string>
     <string name="private_password_type">סיסמה להגנת הפרטיות</string>
     <string name="private_password_type_tips">ניתן לשנות את הסיסמה תחת טביעות אצבע, נתוני פנים, ונעילת מסך > סיסמה להגנת הפרטיות.</string>
     <string name="private_photo">אלבום פרטי</string>
@@ -4666,7 +4672,7 @@ Xiaomi Gaming Cooler"</string>
     <string name="recommended">מומלץ</string>
     <string name="reject_all">מנע מכולם</string>
     <string name="reject_countdown">דחה (%d)</string>
-    <string name="reject_only_opening_screen">Restrict access during app launch for all apps</string>
+    <string name="reject_only_opening_screen">להגביל גישה בזמן הפעלת היישום עבור כל היישומים</string>
     <string name="reject_usb_install">התקנה באמצעות USB של היישומים הבאים נדחתה</string>
     <string name="release_meminfo">ניקוי %dMB</string>
     <string name="release_memory">ניקוי מטמון</string>
