--- a/mtk-sdk36/Japanese/main/SecurityCenter.apk/res/values-ja/strings.xml
+++ b/mtk-sdk36/Japanese/main/SecurityCenter.apk/res/values-ja/strings.xml
@@ -2810,7 +2810,10 @@
     <string name="lock_all_title">すべてのアプリをロック</string>
     <string name="lock_app_input_invalid_car">一部の記号はサポートされていません</string>
     <string name="lock_mode_title">ロック設定</string>
+    <string name="lock_screen_face_password_type_tips">顔データと画面ロックでパスワードを変更できます</string>
+    <string name="lock_screen_finger_password_type_tips">指紋と画面ロックでパスワードを変更できます</string>
     <string name="lock_screen_hongbao_message">%1$sから</string>
+    <string name="lock_screen_password_only_type_tips">「画面ロック」でパスワードを変更できます</string>
     <string name="lock_screen_password_type">画面ロック</string>
     <string name="lock_screen_password_type_tips">[指紋、顔データ、画面ロック] で画面ロックを変更できます。</string>
     <string name="lock_screen_traffic_guide_notification_summary">%sがロック画面で使用されました</string>
@@ -4774,8 +4777,11 @@ WeChatとQQ用の赤い封筒アシスタント
     <string name="privacy_using_record">録音中</string>
     <string name="privacyapp_number_masked_text">通知内容を非表示にしたアプリ</string>
     <string name="privacyapp_number_unmasked_text">通知内容を非表示にできるアプリ</string>
+    <string name="private_face_password_type_tips">[顔データと画面ロック] > [プライバシー保護パスワード]でパスワードを変更できます</string>
     <string name="private_file">非公開ファイル</string>
+    <string name="private_finger_password_type_tips">[指紋と画面ロック] > [プライバシー保護パスワード]でパスワードを変更できます</string>
     <string name="private_note">隠しメモ</string>
+    <string name="private_password_only_type_tips">[画面ロック] > [プライバシー保護パスワード]でパスワードを変更できます</string>
     <string name="private_password_type">プライバシー保護パスワード</string>
     <string name="private_password_type_tips">[指紋、顔データ、画面ロック] > [プライバシー保護パスワード] でパスワードを変更できます。</string>
     <string name="private_photo">プライベートアルバム</string>
