--- a/mtk-sdk36/Lithuanian/main/SecurityCenter.apk/res/values-lt/strings.xml
+++ b/mtk-sdk36/Lithuanian/main/SecurityCenter.apk/res/values-lt/strings.xml
@@ -1194,7 +1194,7 @@ Tačiau kai kurios jūsų transakcijos dar neužbaigtos. Norėdami atsisakyti su
     <string name="confirm_package_type">Patvirtinkite savo duomenų planą</string>
     <string name="confirm_prompt_all_permission">Prašyti leidimų visoms programoms?</string>
     <string name="confirm_reject_all_permission">Apriboti šios funkcijos naudojimą visose programose?</string>
-    <string name="confirm_reject_all_permission_only_opening_screen">Restrict this permission during app launch for all apps?</string>
+    <string name="confirm_reject_all_permission_only_opening_screen">Apriboti šį leidimą paleidimo metu visoms programoms?</string>
     <string name="confirm_take">Gauti</string>
     <string name="confirm_upgrade">Parametrai</string>
     <string name="connect_internet_by_mobiledata">Mobiliųjų duomenų ryšys</string>
@@ -2810,7 +2810,10 @@ perjunkite į gulsčią režimą!"</string>
     <string name="lock_all_title">Užblokuoti visas programas</string>
     <string name="lock_app_input_invalid_car">Kai kurie simboliai nepalaikomi</string>
     <string name="lock_mode_title">Užrakto parametrai</string>
+    <string name="lock_screen_face_password_type_tips">Savo slaptažodį galite pakeisti čia: Veido duomenys ir ekrano užraktas</string>
+    <string name="lock_screen_finger_password_type_tips">Savo slaptažodį galite pakeisti čia: Pirštų atspaudai ir ekrano užraktas</string>
     <string name="lock_screen_hongbao_message">Nuo %1$s</string>
+    <string name="lock_screen_password_only_type_tips">Savo slaptažodį galite pakeisti čia: Ekrano užraktas</string>
     <string name="lock_screen_password_type">Ekrano užraktas</string>
     <string name="lock_screen_password_type_tips">Savo ekrano užraktą galite pakeisti čia: Pirštų antspaudai, veido duomenys ir ekrano užraktas.</string>
     <string name="lock_screen_traffic_guide_notification_summary">Užrakto ekrane išnaudota %s</string>
@@ -3181,7 +3184,7 @@ Jūsų įrenginys dabar %s greitesnis."</string>
     <string name="more_setting_summary">Tinkinkite priminimus ir nustatykite šios funkcijos režimą „Netrukdyti“</string>
     <string name="more_settings">Daugiau</string>
     <string name="morning">Rytas</string>
-    <string name="msg_only_opening_screen">Access will be restricted for the first %d seconds after the app starts</string>
+    <string name="msg_only_opening_screen">Prieiga bus apribota pirmąsias %d sekundžių paleidus programą</string>
     <string name="mtp_ptp_mode_summary">MTP arba PTP yra aktyvus</string>
     <string name="mtrl_badge_numberless_content_description">Naujas pranešimas</string>
     <string name="mtrl_chip_close_icon_content_description">Pašalinti %1$s</string>
@@ -3994,7 +3997,7 @@ Ultra energijos taupymas išjungiamas"</string>
     <string name="permission_instruction_send_mms">Šis leidimas leidžia programoms siųsti multimedijų žinutes, dėl kurių gali būti taikomi papildomi mokesčiai. Kenkėjiškos programos gali naudoti šį leidimą mokamiems pranešimams siųsti be jūsų sutikimo.</string>
     <string name="permission_instruction_send_payment_sms">Ši teisės programoms suteikia galimybę siųsti mokamas tekstines žinutes.</string>
     <string name="permission_instruction_send_sms">Šis leidimas leidžia programoms siųsti teksto pranešimus, dėl kurių gali būti taikomi papildomi mokesčiai. Kenkėjiškos programos gali naudoti šį leidimą mokamiems pranešimams siųsti be jūsų sutikimo.</string>
-    <string name="permission_instruction_shake">"This permission allows apps to detect the device's position in space, recognize shaking, determine screen orientation, as well as use game controls and map navigation."</string>
+    <string name="permission_instruction_shake">Suteikus šį leidimą, programoms leidžiama aptikti įrenginio padėtį erdvėje, atpažinti kratymą, nustatyti ekrano padėtį, taip pat naudoti žaidimo valdiklius ir žemėlapių navigaciją.</string>
     <string name="permission_instruction_show_locked">Šis leidimas leidžia programoms rodyti elementus užrakto ekrane. Kenkėjiškos programos gali pasinaudoti šiuo leidimu, kad rodytų skelbimus.</string>
     <string name="permission_instruction_sociality">Jei leidžiate programėlių prieigą prie failų jų aplankuose, saugant jūsų privatumą sistema leidžia jums nuspręsti, ar taip pat norėsite, jog šios programėlės gautų prieigą prie failų , sugeneruotų socialinių tinklų programėlėse. Kadangi programėlės su „Android“ API 29 ar aukštesniu lygiu jau palaiko saugyklos skaidymo funkciją, šis mygtukas jose nebus pateiktas.</string>
     <string name="permission_instruction_storage">Jei leidžiate programėlių prieigą prie failų jų aplankuose, saugant jūsų privatumą sistema leidžia jums nuspręsti, ar taip pat norėsite, jog šios programėlės gautų prieigą prie failų jūsų Galerijoje ir failų, sugeneruotų socialinių tinklų programėlėse. Kadangi programėlės su „Android“ API 29 ar aukštesniu lygiu jau palaiko saugyklos skaidymo funkciją, šis mygtukas jose nebus pateiktas.</string>
@@ -4009,7 +4012,7 @@ Ultra energijos taupymas išjungiamas"</string>
     <string name="permission_instruction_write_settings">Šis leidimas suteikia teisę programoms keisti sistemos nustatymus. Kenkėjiškos programos gali naudoti šį leidimo būdą su sistemos nustatymais ir turėti įtakos įprastam įrenginio naudojimui.</string>
     <string name="permission_legacy_storage">Pasiekti nuotraukas, vaizdo įrašus, garso įrašus ir failus</string>
     <string name="permission_oaid_desc">Leisti %1$s stebėti jūsų veiklą kitose programose ir svetainėse?</string>
-    <string name="permission_only_opening_screen">Restrict access during app launch</string>
+    <string name="permission_only_opening_screen">Apriboti prieigą programos paleidimo metu</string>
     <string name="permission_permission_control_closed_desc_dialog_msg">Programos neklaus jūsų leidimo prieš nuskaitant kontaktus, peržiūrint skambučių istoriją, keičiant sisteminius parametrus, stebint fotoaparatą ar kitus įrenginio išteklius. Šią funkciją galite įjungti „Leidimų“ parametruose.</string>
     <string name="permission_permission_control_closed_desc_dialog_title">Teisių valdymas</string>
     <string name="permission_precise_location">Tiksli vieta</string>
@@ -4775,8 +4778,11 @@ Atšaukti sutikimą dabar?"</string>
     <string name="privacy_using_record">Garso įrašymas</string>
     <string name="privacyapp_number_masked_text">Pranešimo turinys – paslėptas</string>
     <string name="privacyapp_number_unmasked_text">Pranešimo turinys negali būti paslėptas</string>
+    <string name="private_face_password_type_tips">Savo slaptažodį galite pakeisti čia: Veido duomenys ir ekrano užraktas > Privatumo apsaugos slaptažodis</string>
     <string name="private_file">Privatūs failai</string>
+    <string name="private_finger_password_type_tips">Savo slaptažodį galite pakeisti čia: Pirštų atspaudai ir ekrano užraktas > Privatumo apsaugos slaptažodis</string>
     <string name="private_note">Paslėpti užrašai</string>
+    <string name="private_password_only_type_tips">Savo slaptažodį galite pakeisti čia: Ekrano užraktas > Privatumo apsaugos slaptažodis</string>
     <string name="private_password_type">Privatumo saugos slaptažodis</string>
     <string name="private_password_type_tips">Savo slaptažodį galite pakeisti čia: Pirštų antspaudai, veido duomenys ir ekrano užraktas > Privatumo apsaugos slaptažodis.</string>
     <string name="private_photo">Privatus albumas</string>
@@ -4833,7 +4839,7 @@ Atšaukti sutikimą dabar?"</string>
     <string name="recommended">Rekomenduojama</string>
     <string name="reject_all">Apriboti viską</string>
     <string name="reject_countdown">Uždrausti (%d)</string>
-    <string name="reject_only_opening_screen">Restrict access during app launch for all apps</string>
+    <string name="reject_only_opening_screen">Apriboti prieigą paleidimo metu visoms programoms</string>
     <string name="reject_usb_install">Pasirinktų programų diegimas per USB buvo uždraustas</string>
     <string name="release_meminfo">Atlaisvinti %dMB</string>
     <string name="release_memory">Valyti talpyklą</string>
