--- a/mtk-sdk36/Polish/main/SecurityCenter.apk/res/values-pl/strings.xml
+++ b/mtk-sdk36/Polish/main/SecurityCenter.apk/res/values-pl/strings.xml
@@ -2808,7 +2808,10 @@ Operator może naliczyć dodatkowe opłaty, jeśli będziesz korzystać z danych
     <string name="lock_all_title">Zablokuj wszystkie aplikacje</string>
     <string name="lock_app_input_invalid_car">Niektóre symbole nie są obsługiwane</string>
     <string name="lock_mode_title">Ustawienia ograniczenia</string>
+    <string name="lock_screen_face_password_type_tips">You can change your password in Face data &amp; screen lock</string>
+    <string name="lock_screen_finger_password_type_tips">You can change your password in Fingerprints &amp; screen lock</string>
     <string name="lock_screen_hongbao_message">Od %1$s</string>
+    <string name="lock_screen_password_only_type_tips">You can change your password in Screen lock</string>
     <string name="lock_screen_password_type">Kod blokady ekranu</string>
     <string name="lock_screen_password_type_tips">Możesz zmienić blokadę ekranu w: Odcisk palca, Dane twarzy i Blokada ekranu.</string>
     <string name="lock_screen_traffic_guide_notification_summary">%s użytych podczas blokady ekranu</string>
@@ -4772,8 +4775,11 @@ Wycofać zgodę?"</string>
     <string name="privacy_using_record">Nagrywanie dźwięku</string>
     <string name="privacyapp_number_masked_text">Treść powiadomienia jest ukryta</string>
     <string name="privacyapp_number_unmasked_text">Treść powiadomienia może być ukryta</string>
+    <string name="private_face_password_type_tips">You can change your password in Face data &amp; screen lock > Privacy protection password</string>
     <string name="private_file">Prywatne pliki</string>
+    <string name="private_finger_password_type_tips">You can change your password in Fingerprints &amp; screen lock > Privacy protection password</string>
     <string name="private_note">Ukryte notatki</string>
+    <string name="private_password_only_type_tips">You can change your password in Screen lock > Privacy protection password</string>
     <string name="private_password_type">Hasło ochrony prywatności</string>
     <string name="private_password_type_tips">Możesz zmienić hasło w: Odcisk palca, Dane twarzy i Blokada ekranu > Hasło ochrony prywatności.</string>
     <string name="private_photo">Prywatny album</string>
