--- a/mtk-sdk36/Russian/main/SecurityCenter.apk/res/values-ru/strings.xml
+++ b/mtk-sdk36/Russian/main/SecurityCenter.apk/res/values-ru/strings.xml
@@ -1193,7 +1193,7 @@
     <string name="confirm_package_type">Подтвердите таррифный план</string>
     <string name="confirm_prompt_all_permission">Запрашивать разрешения для всех приложений?</string>
     <string name="confirm_reject_all_permission">Запретить всем приложениям использовать эту функцию?</string>
-    <string name="confirm_reject_all_permission_only_opening_screen">Restrict this permission during app launch for all apps?</string>
+    <string name="confirm_reject_all_permission_only_opening_screen">Ограничить это разрешение во время запуска приложения для всех приложений?</string>
     <string name="confirm_take">Получить</string>
     <string name="confirm_upgrade">Параметры</string>
     <string name="connect_internet_by_mobiledata">Мобильный интернет</string>
@@ -2808,7 +2808,10 @@ Xiaomi Gaming Cooler"</string>
     <string name="lock_all_title">Заблокировать все приложения</string>
     <string name="lock_app_input_invalid_car">Некоторые символы не поддерживаются</string>
     <string name="lock_mode_title">Режим защиты</string>
+    <string name="lock_screen_face_password_type_tips">Вы можете изменить свой пароль в разделе «Данные лица и блокировка экрана»</string>
+    <string name="lock_screen_finger_password_type_tips">Вы можете изменить свой пароль в разделе «Отпечатки пальцев и блокировка экрана»</string>
     <string name="lock_screen_hongbao_message">От %1$s</string>
+    <string name="lock_screen_password_only_type_tips">Вы можете изменить свой пароль в разделе \"Блокировка экрана\"</string>
     <string name="lock_screen_password_type">Блокировка экрана</string>
     <string name="lock_screen_password_type_tips">Вы можете изменить свой пароль Блокировки экрана в разделе «Отпечатки пальцев, данные лица и блокировка экрана».</string>
     <string name="lock_screen_traffic_guide_notification_summary">Используется на экране блокировки: %s</string>
@@ -3179,7 +3182,7 @@ Xiaomi Gaming Cooler"</string>
     <string name="more_setting_summary">Настройте напоминания и установите режим «Не беспокоить» для этой функции</string>
     <string name="more_settings">Еще</string>
     <string name="morning">Утро</string>
-    <string name="msg_only_opening_screen">Access will be restricted for the first %d seconds after the app starts</string>
+    <string name="msg_only_opening_screen">Доступ будет ограничен в течение первых %d секунд после запуска приложения</string>
     <string name="mtp_ptp_mode_summary">Протокол MTP или PTP активен.</string>
     <string name="mtrl_badge_numberless_content_description">Новое уведомление</string>
     <string name="mtrl_chip_close_icon_content_description">Удалить \"%1$s\"</string>
@@ -3992,7 +3995,7 @@ Xiaomi Gaming Cooler"</string>
     <string name="permission_instruction_send_mms">Это разрешение позволяет приложениям отправлять MMS-сообщения, что может привести к дополнительным расходам. Вредоносные приложения могут использовать это разрешение для отправки платных сообщений без вашего согласия.</string>
     <string name="permission_instruction_send_payment_sms">Это разрешение позволяет приложениям отправлять платные SMS-сообщения.</string>
     <string name="permission_instruction_send_sms">Это разрешение позволяет приложениям отправлять SMS-сообщения, что может привести к дополнительным расходам. Вредоносные приложения могут использовать это разрешение для отправки платных сообщений без вашего согласия.</string>
-    <string name="permission_instruction_shake">"This permission allows apps to detect the device's position in space, recognize shaking, determine screen orientation, as well as use game controls and map navigation."</string>
+    <string name="permission_instruction_shake">Это разрешение позволяет приложениям определять положение устройства в пространстве, распознавать тряску, определять ориентацию экрана, а также использовать элементы управления игрой и навигацию по карте.</string>
     <string name="permission_instruction_show_locked">Это разрешение позволяет приложениям отображать объекты на экране блокировки. Вредоносные программы могут использовать это разрешение для показа рекламы.</string>
     <string name="permission_instruction_sociality">Если вы разрешите приложениям доступ к файлам в их собственных папках, в целях защиты конфиденциальности система позволит вам решать, хотите ли вы, чтобы эти приложения также получали доступ к файлам, созданным приложениями социальных сетей. Поскольку приложения с Android API 29 уровня и выше уже поддерживают разделение хранилища, этот переключатель остается для них недоступен.</string>
     <string name="permission_instruction_storage">Если вы разрешите приложениям доступ к файлам в их собственных папках, в целях защиты конфиденциальности система позволит вам решать, хотите ли вы, чтобы эти приложения также получали доступ к объектам в Галерее и файлам, созданным приложениями социальных сетей. Поскольку приложения с Android API 29 уровня и выше уже поддерживают разделение хранилища, этот переключатель остается для них недоступен.</string>
@@ -4007,7 +4010,7 @@ Xiaomi Gaming Cooler"</string>
     <string name="permission_instruction_write_settings">Это разрешение позволяет приложениям изменять системные настройки. Вредоносные приложения могут использовать это разрешение с вашими системными настройками и влиять на нормальное использование вашего устройства.</string>
     <string name="permission_legacy_storage">Доступ к фото, видео, аудио и файлам</string>
     <string name="permission_oaid_desc">Разрешить %1$s отслеживать ваши действия в других приложениях и на веб-сайтах?</string>
-    <string name="permission_only_opening_screen">Restrict access during app launch</string>
+    <string name="permission_only_opening_screen">Ограничить доступ во время запуска приложения</string>
     <string name="permission_permission_control_closed_desc_dialog_msg">Если управление разрешениями отключено, приложения не будут запрашивать разрешения на доступ к вашим данным и изменение настроек системы. Вы можете включить управление в настройках разрешений.</string>
     <string name="permission_permission_control_closed_desc_dialog_title">Управление разрешениями</string>
     <string name="permission_precise_location">Точное местоположение</string>
@@ -4772,8 +4775,11 @@ Xiaomi Gaming Cooler"</string>
     <string name="privacy_using_record">Запись звука</string>
     <string name="privacyapp_number_masked_text">Содержимое уведомлений скрыто</string>
     <string name="privacyapp_number_unmasked_text">Содержимое уведомлений может быть скрыто</string>
+    <string name="private_face_password_type_tips">Вы можете изменить свой пароль в разделе «Данные лица и блокировка экрана» > «Пароль защиты личных данных»</string>
     <string name="private_file">Личные файлы</string>
+    <string name="private_finger_password_type_tips">Вы можете изменить свой пароль в разделе «Отпечатки пальцев, данные и блокировка экрана» > «Пароль защиты личных данных»</string>
     <string name="private_note">Скрытые заметки</string>
+    <string name="private_password_only_type_tips">Вы можете изменить свой пароль в разделе «Блокировка экрана» > «Пароль защиты личных данных»</string>
     <string name="private_password_type">Пароль защиты личных данных</string>
     <string name="private_password_type_tips">Вы можете изменить свой пароль в разделе «Отпечатки пальцев, данные лица и блокировка экрана» > «Пароль защиты личных данных».</string>
     <string name="private_photo">Личный альбом</string>
@@ -4830,7 +4836,7 @@ Xiaomi Gaming Cooler"</string>
     <string name="recommended">Рекомендуемые</string>
     <string name="reject_all">Запретить всем</string>
     <string name="reject_countdown">Запретить (%d)</string>
-    <string name="reject_only_opening_screen">Restrict access during app launch for all apps</string>
+    <string name="reject_only_opening_screen">Ограничить доступ во время запуска приложения для всех приложений</string>
     <string name="reject_usb_install">Установка следующих приложений через USB отменена</string>
     <string name="release_meminfo">Освобождено %d МБ</string>
     <string name="release_memory">Очистить память</string>
