--- a/mtk-sdk36/Serbian/main/SecurityCenter.apk/res/values-sr/strings.xml
+++ b/mtk-sdk36/Serbian/main/SecurityCenter.apk/res/values-sr/strings.xml
@@ -2808,7 +2808,10 @@ Xiaomi Gaming Cooler"</string>
     <string name="lock_all_title">Закључавање свих апликација</string>
     <string name="lock_app_input_invalid_car">Неки симболи нису подржани</string>
     <string name="lock_mode_title">Подешавање закључавања</string>
+    <string name="lock_screen_face_password_type_tips">Лозинку можете променити у Подаци о лицу и закључавање екрана</string>
+    <string name="lock_screen_finger_password_type_tips">Лозинку можете променити у Отисци прстију и закључавање екрана</string>
     <string name="lock_screen_hongbao_message">Од %1$s</string>
+    <string name="lock_screen_password_only_type_tips">Лозинку можете променити у Закључавање екрана</string>
     <string name="lock_screen_password_type">Закључавање екрана</string>
     <string name="lock_screen_password_type_tips">Можете променити закључавање екрана у Отисци прстију, подаци о лицу и закључавање екрана.</string>
     <string name="lock_screen_traffic_guide_notification_summary">Искоришћено %s код закљ. екрана</string>
@@ -4772,8 +4775,11 @@ Xiaomi Gaming Cooler"</string>
     <string name="privacy_using_record">Снимање звука</string>
     <string name="privacyapp_number_masked_text">Садржај обавештења је сакривен</string>
     <string name="privacyapp_number_unmasked_text">Садржај обавештења се може сакрити</string>
+    <string name="private_face_password_type_tips">Лозинку можете променити у Подаци о лицу и закључавање екрана > Лозинка за заштиту приватности</string>
     <string name="private_file">Приватни фајлови</string>
+    <string name="private_finger_password_type_tips">Лозинку можете променити у Отисци прстију и закључавање екрана > Лозинка за заштиту приватности</string>
     <string name="private_note">Скривене белешке</string>
+    <string name="private_password_only_type_tips">Лозинку можете променити у Закључавање екрана > Лозинка за заштиту приватности</string>
     <string name="private_password_type">Лозинка заштите приватности</string>
     <string name="private_password_type_tips">Лозинку можете променити у Отисци прстију, подаци о лицу и закључавање екрана > Лозинка за заштиту приватности.</string>
     <string name="private_photo">Приватни албум</string>
