--- a/mtk-sdk36/Thai/main/SecurityCenter.apk/res/values-th/strings.xml
+++ b/mtk-sdk36/Thai/main/SecurityCenter.apk/res/values-th/strings.xml
@@ -1193,7 +1193,7 @@
     <string name="confirm_package_type">ยืนยันแผนข้อมูลของคุณ</string>
     <string name="confirm_prompt_all_permission">ต้องการตั้งค่าการอนุญาตแอปทั้งหมดเป็นสอบถาม?</string>
     <string name="confirm_reject_all_permission">จำกัดแอปทั้งหมดจากการใช้คุณลักษณะนี้?</string>
-    <string name="confirm_reject_all_permission_only_opening_screen">Restrict this permission during app launch for all apps?</string>
+    <string name="confirm_reject_all_permission_only_opening_screen">จำกัดการอนุญาตนี้ระหว่างการเปิดแอปสำหรับแอปทั้งหมดหรือไม่?</string>
     <string name="confirm_take">ขอรับ</string>
     <string name="confirm_upgrade">ตัวเลือก</string>
     <string name="connect_internet_by_mobiledata">เชื่อมต่อเครือข่ายข้อมูลมือถือ</string>
@@ -2810,7 +2810,10 @@ Xiaomi Gaming Cooler"</string>
     <string name="lock_all_title">ล็อกแอปทั้งหมด</string>
     <string name="lock_app_input_invalid_car">ไม่รองรับสัญลักษณ์บางอย่าง</string>
     <string name="lock_mode_title">การตั้งค่าการล็อก</string>
+    <string name="lock_screen_face_password_type_tips">คุณสามารถเปลี่ยนรหัสผ่านของคุณได้ในข้อมูลใบหน้าและการล็อคหน้าจอ</string>
+    <string name="lock_screen_finger_password_type_tips">คุณสามารถเปลี่ยนรหัสผ่านของคุณได้ในลายนิ้วมือและการล็อคหน้าจอ</string>
     <string name="lock_screen_hongbao_message">จาก %1$s</string>
+    <string name="lock_screen_password_only_type_tips">คุณสามารถเปลี่ยนรหัสผ่านของคุณได้ในการล็อคหน้าจอ</string>
     <string name="lock_screen_password_type">ล็อกหน้าจอ</string>
     <string name="lock_screen_password_type_tips">คุณสามารถเปลี่ยนการล็อคหน้าจอได้ใน ลายนิ้วมือ ข้อมูลใบหน้า และการล็อคหน้าจอ</string>
     <string name="lock_screen_traffic_guide_notification_summary">ใช้งานไป %s ระหว่างล็อกหน้าจอ</string>
@@ -3181,7 +3184,7 @@ Xiaomi Gaming Cooler"</string>
     <string name="more_setting_summary">ปรับแต่งคำเตือนและตั้งค่า DND สำหรับฟีเจอร์นี้</string>
     <string name="more_settings">เพิ่มเติม</string>
     <string name="morning">เช้า</string>
-    <string name="msg_only_opening_screen">Access will be restricted for the first %d seconds after the app starts</string>
+    <string name="msg_only_opening_screen">การเข้าถึงจะถูกจำกัดในช่วง %d วินาทีแรกหลังจากแอปเริ่มต้น</string>
     <string name="mtp_ptp_mode_summary">MTP หรือ PTP ทำงานอยู่</string>
     <string name="mtrl_badge_numberless_content_description">การแจ้งเตือนใหม่</string>
     <string name="mtrl_chip_close_icon_content_description">นำ %1$s ออก</string>
@@ -3994,7 +3997,7 @@ Xiaomi Gaming Cooler"</string>
     <string name="permission_instruction_send_mms">สิทธิ์นี้อนุญาตให้แอปส่งข้อความมัลติมีเดีย ซึ่งอาจมีค่าธรรมเนียมเพิ่มเติม แอปที่เป็นอันตรายอาจใช้สิทธิ์นี้เพื่อส่งข้อความแบบชำระเงินโดยไม่ได้รับความยินยอมจากคุณ</string>
     <string name="permission_instruction_send_payment_sms">การอนุญาตนี้จะอนุญาตให้แอปส่งข้อความแบบชำระเงินได้</string>
     <string name="permission_instruction_send_sms">สิทธิ์นี้อนุญาตให้แอปส่งข้อความ ซึ่งอาจมีค่าธรรมเนียมเพิ่มเติม แอปที่เป็นอันตรายอาจใช้สิทธิ์นี้เพื่อส่งข้อความแบบชำระเงินโดยไม่ได้รับความยินยอมจากคุณ</string>
-    <string name="permission_instruction_shake">"This permission allows apps to detect the device's position in space, recognize shaking, determine screen orientation, as well as use game controls and map navigation."</string>
+    <string name="permission_instruction_shake">การอนุญาตนี้ช่วยให้แอปสามารถตรวจจับตำแหน่งของอุปกรณ์ในอวกาศ รับรู้การสั่น กำหนดทิศทางของหน้าจอ รวมถึงใช้การควบคุมเกมและการนำทางแผนที่</string>
     <string name="permission_instruction_show_locked">การอนุญาตนี้ทำให้แอพสามารถแสดงรายการบนหน้าจอล็อคของคุณ แอปที่เป็นอันตรายอาจใช้การอนุญาตนี้เพื่อแสดงโฆษณา</string>
     <string name="permission_instruction_sociality">หากคุณอนุญาตให้แอปเข้าถึงไฟล์ในโฟลเดอร์ของตนเอง ระบบจะช่วยให้คุณตัดสินใจได้ว่าคุณต้องการให้แอปเหล่านี้เข้าถึงไฟล์ที่สร้างในแอปโซเชียลมีเดียหรือไม่เพื่อปกป้องความเป็นส่วนตัวของคุณ เนื่องจากแอปที่มี Android API ระดับ 29 ขึ้นไปรองรับพาร์ติชันพื้นที่เก็บข้อมูลอยู่แล้วจึงไม่มีสวิตช์นี้ให้</string>
     <string name="permission_instruction_storage">หากคุณอนุญาตให้แอปเข้าถึงไฟล์ในโฟลเดอร์ของตนเอง ระบบจะช่วยให้คุณตัดสินใจได้ว่าคุณต้องการให้แอปเหล่านี้เข้าถึงรายการในแกลเลอรีของคุณหรือไม่และไฟล์ที่สร้างในแอปโซเชียลมีเดียเพื่อปกป้องความเป็นส่วนตัวของคุณ เนื่องจากแอปที่มี Android API ระดับ 29 ขึ้นไปรองรับพาร์ติชันพื้นที่เก็บข้อมูลอยู่แล้วจึงไม่มีสวิตช์นี้ให้</string>
@@ -4009,7 +4012,7 @@ Xiaomi Gaming Cooler"</string>
     <string name="permission_instruction_write_settings">สิทธิ์นี้อนุญาตให้แอปแก้ไขการตั้งค่าระบบ แอปที่เป็นอันตรายอาจใช้สิทธิ์นี้เพื่อแทรกแซงการตั้งค่าระบบของคุณและส่งผลต่อการใช้งานอุปกรณ์ของคุณตามปกติ</string>
     <string name="permission_legacy_storage">เข้าถึงรูปภาพ วิดีโอ เสียง และไฟล์</string>
     <string name="permission_oaid_desc">อนุญาตให้ %1$s ติดตามกิจกรรมของคุณบนแอปและเว็บไซต์อื่นหรือไม่?</string>
-    <string name="permission_only_opening_screen">Restrict access during app launch</string>
+    <string name="permission_only_opening_screen">จำกัดการเข้าถึงในระหว่างการเปิดแอป</string>
     <string name="permission_permission_control_closed_desc_dialog_msg">แอปต่างๆในเครื่องของคุณจะไม่ร้องขอการอนุญาตในการเข้าถึงรายชื่อผู้ติดต่อ รายการโทรเข้าออก การตั้งค่าระบบ หรือใช้งานกล้องและส่วนอื่นๆในระบบ อย่างไรก็ตามคุณสามารถเปิดใช้งานได้ใหม่จากเมนูการตั้งค่าการอนุญาต</string>
     <string name="permission_permission_control_closed_desc_dialog_title">ตัวจัดการสิทธิ์</string>
     <string name="permission_precise_location">ตำแหน่งที่แม่นยำ</string>
@@ -4774,8 +4777,11 @@ Xiaomi Gaming Cooler"</string>
     <string name="privacy_using_record">บันทึกเสียง</string>
     <string name="privacyapp_number_masked_text">เนื้อหาการแจ้งเตือนถูกซ่อน</string>
     <string name="privacyapp_number_unmasked_text">เนื้อหาการแจ้งเตือนสามารถซ่อนได้</string>
+    <string name="private_face_password_type_tips">คุณสามารถเปลี่ยนรหัสผ่านของคุณได้ใน ข้อมูลใบหน้าและการล็อคหน้าจอ > รหัสผ่านเพื่อการปกป้องความเป็นส่วนตัว</string>
     <string name="private_file">ไฟล์ส่วนบุคคล</string>
+    <string name="private_finger_password_type_tips">คุณสามารถเปลี่ยนรหัสผ่านของคุณได้ใน ลายนิ้วมือและการล็อคหน้าจอ > รหัสผ่านเพื่อการปกป้องความเป็นส่วนตัว</string>
     <string name="private_note">บันทึกที่ซ่อนอยู่</string>
+    <string name="private_password_only_type_tips">คุณสามารถเปลี่ยนรหัสผ่านของคุณได้ใน การล็อคหน้าจอ > รหัสผ่านเพื่อการปกป้องความเป็นส่วนตัว</string>
     <string name="private_password_type">รหัสผ่านการปกป้องความเป็นส่วนตัว</string>
     <string name="private_password_type_tips">คุณสามารถเปลี่ยนรหัสผ่านของคุณได้ใน ลายนิ้วมือ ข้อมูลใบหน้า และการล็อคหน้าจอ > รหัสผ่านเพื่อการปกป้องความเป็นส่วนตัว</string>
     <string name="private_photo">อัลบั้มส่วนตัว</string>
@@ -4832,7 +4838,7 @@ Xiaomi Gaming Cooler"</string>
     <string name="recommended">รายการแนะนำ</string>
     <string name="reject_all">จำกัดทั้งหมด</string>
     <string name="reject_countdown">ปฎิเสธ (%d)</string>
-    <string name="reject_only_opening_screen">Restrict access during app launch for all apps</string>
+    <string name="reject_only_opening_screen">จำกัดการเข้าถึงระหว่างการเปิดแอปสำหรับแอปทั้งหมด</string>
     <string name="reject_usb_install">ปฏิเสธการติดตั้งแอปต่อไปนี้ผ่านทาง USB</string>
     <string name="release_meminfo">เพิ่ม %dMB</string>
     <string name="release_memory">ล้างแคช</string>
